Fixed issue with error messages being too dark to see with dark mode enabled

--- a/Source/static/signup.css
+++ b/Source/static/signup.css
@@ -2,8 +2,8 @@
 
 #account_popup{
     position: fixed;
-	   width: 100%;
-	   height: 100%;
+	width: 100%;
+	height: 100%;
     display: block;
     top: 0;
     left: 0;
@@ -50,7 +50,9 @@ button,
 	height: 50px;
 	margin-left: 5em;
 }
-
+.help-block{
+    color: var(--title);
+}
 label{
 	padding-left: 1em;
 	height: 50px;
